--- a/content/resources/6.md
+++ b/content/resources/6.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/11-360-community-growth-and-land-use-planning-fall-2006/4349257e160b5de227f2e76fc4646dd5_6.pdf
+file: /media/courses/11-360-community-growth-and-land-use-planning-fall-2006/4349257e160b5de227f2e76fc4646dd5_6.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: 6.pdf
 uid: 4349257e-160b-5de2-27f2-e76fc4646dd5
