--- a/content/resources/6.md
+++ b/content/resources/6.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 68ac24fd-bb1c-0e57-e142-b0bd8bd59c2f
 resourcetype: Document
 title: 6.pdf
 uid: 4349257e-160b-5de2-27f2-e76fc4646dd5
