--- a/content/resources/11-360f06-th.md
+++ b/content/resources/11-360f06-th.md
@@ -9,6 +9,7 @@ image_metadata:
   credit: ''
   image-alt: An image from the bridge on Main Street in Medford.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 11-360f06-th.jpg
