--- a/content/resources/11-360f06.md
+++ b/content/resources/11-360f06.md
@@ -10,10 +10,10 @@ image_metadata:
   credit: ''
   image-alt: An image from the bridge on Main Street in Medford.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 11-360f06.jpg
 uid: 1598b46a-165e-3fc3-64ac-759e00efebb3
 ---
 Medford, the site of this year's class project. (Image courtesy of the studio.)
-
