--- a/content/resources/6.md
+++ b/content/resources/6.md
@@ -5,6 +5,7 @@ file: /courses/11-360-community-growth-and-land-use-planning-fall-2006/4349257e1
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
