Sync all content

--- a/content/resources/11-360f06.md
+++ b/content/resources/11-360f06.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Medford, the site of this year's class project. (Image courtesy of the
   studio.)
 file: /courses/11-360-community-growth-and-land-use-planning-fall-2006/1598b46a165e3fc364ac759e00efebb3_11-360f06.jpg
+file_size: 63067
 file_type: image/jpeg
 image_metadata:
   caption: Medford, the site of this year's class project. (Image courtesy of the
