--- a/content/resources/6.md
+++ b/content/resources/6.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/11-360-community-growth-and-land-use-planning-fall-2006/4349257e160b5de227f2e76fc4646dd5_6.pdf
+file_size: 6129196
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
